# Trust-Gated-Capability-Control

./: .gitignore  README.md  main.py  pyproject.toml
ACM_Conference_Proceedings_Primary_Article_Template/: ACM-Reference-Format.bst  reference.bib  sigconf.tex
final/: README.md  SUMMARY.md  _appendix_numbers.json
final/w10_long_horizon/: README.md  results.json
final/w11_sensitivity/: README.md  results.json
final/w12_recovery/: README.md  results.json
final/w13_byzantine_chain/: README.md  results.json
final/w14_audit_trail/: README.md  results.json
final/w15_calibration_robustness/: README.md  results.json
final/w16_adaptive_attacker/: README.md  results.json
final/w1_multi_model/: README.md  results.json
final/w2_bounded_forgery/: README.md  results.json
final/w3_baselines/: README.md  results.json
final/w4_learned_coupling/: README.md  results.json
final/w5_latency_sweep/: README.md  results.json
final/w6_bootstrap_ci/: README.md  results.json
final/w7_collusion/: README.md  results.json
final/w8_prompt_injection/: README.md  results.json
final/w9_layer_ablation/: README.md  results.json
scripts/: collect_appendix_numbers.py  diag_w1.py  diag_w5.py  diag_w7.py
src/tgcc/: __init__.py  beta_belief.py  composite.py  config.py  controller.py  data_qa.py  episodes.py  hedge.py  metrics.py  models.py  probes.py  reporting.py  synergy.py
src/tgcc/baselines/: __init__.py  agentguard.py  base.py  constitutional.py  dynatrust.py  eigentrust.py  naive.py
src/tgcc/experiments/: w10_long_horizon.py  w11_sensitivity.py  w12_recovery.py  (+13 more)
